--- a/nsswitch.conf
+++ b/nsswitch.conf
@@ -35,7 +35,7 @@ shadow:     files
 group:      files
 
 #hosts:     db files nisplus nis dns
-hosts:      files dns
+hosts:      files
 
 # Example - obey only what nisplus tells us...
 #services:   nisplus [NOTFOUND=return] files
